# sample-emscripten-project-template

./: .gitignore  README.md
cpp/: CMakeLists.txt  build_web.sh  install_emsdk.sh
cpp/src/: main.cpp
